<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test_page_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestActivity" >

    <TextView
        android:id="@+id/testPageIntroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|fill_horizontal"
        android:padding="5dp"
        android:text="@string/testPageIntroText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/default_color"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/testPageIntroTextView"
        android:layout_below="@+id/testPageIntroTextView"
        android:gravity="center_vertical|fill_horizontal"
        android:padding="5dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF0000"
        android:textSize="@dimen/introTextSize" />

    <FrameLayout
        android:id="@+id/phoneNumberFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/errorTextView"
        android:layout_below="@+id/errorTextView"
        android:paddingBottom="20dp" >

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:paddingLeft="120dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/phone_num_lable" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/countFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneNumberFrameLayout"
        android:layout_below="@+id/phoneNumberFrameLayout" >

        <EditText
            android:id="@+id/callOrSMSCountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:paddingLeft="120dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/count_lable" />
    </FrameLayout>

    <Button
        android:id="@+id/sendSMSButton"
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:layout_below="@id/countFrameLayout"
        android:layout_gravity="bottom"
        android:onClick="sendSMS"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/send_sms"
        android:textSize="13sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/makeCallButton"
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:layout_below="@id/countFrameLayout"
        android:layout_gravity="bottom"
        android:layout_toRightOf="@id/sendSMSButton"
        android:onClick="makeCall"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/make_call"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:layout_below="@id/countFrameLayout"
        android:layout_gravity="bottom"
        android:layout_toRightOf="@id/makeCallButton"
        android:onClick="clear"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/clear"
        android:textSize="13sp"
        android:textStyle="bold" />

    <!--
         <ImageView
        android:id="@+id/waitImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/makeCallButton"
        android:contentDescription="@string/wait"
        android:gravity="center_vertical|fill_horizontal"
        android:padding="5dp"
        android:scaleType="center"
        android:src="@drawable/wait"
        android:visibility="invisible" />
    -->

    <TextView
        android:id="@+id/orTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clearButton"
        android:gravity="center_vertical|center_horizontal"
        android:padding="5dp"
        android:text="@string/orText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/default_color"
        android:textSize="@dimen/introTextSize" />

    <TextView
        android:id="@+id/intervalErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orTextView"
        android:gravity="center_vertical|fill_horizontal"
        android:padding="5dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF0000"
        android:textSize="@dimen/introTextSize" />

    <FrameLayout
        android:id="@+id/TimeGapFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/intervalErrorTextView"
        android:layout_below="@+id/intervalErrorTextView" >

        <EditText
            android:id="@+id/timeGapEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:paddingLeft="120dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/Repeat_call_after" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="150dp"
            android:text="@string/minutes" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/intervalFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TimeGapFrameLayout"
        android:layout_below="@+id/TimeGapFrameLayout" >

        <Spinner
            android:id="@+id/intervalSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="120dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/time_interval" />
    </FrameLayout>

    <Button
        android:id="@+id/intervalMakeCallButton"
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:layout_below="@id/intervalFrameLayout"
        android:layout_gravity="bottom"
        android:onClick="intervalMakeCall"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/make_call"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/intervalClearButton"
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:layout_below="@id/intervalFrameLayout"
        android:layout_gravity="bottom"
        android:layout_toRightOf="@id/intervalMakeCallButton"
        android:onClick="intervalClear"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/clear"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/stopTestButton"
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:layout_below="@id/intervalMakeCallButton"
        android:layout_gravity="bottom"
        android:onClick="stopTest"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/stop_test"
        android:textSize="13sp"
        android:textStyle="bold" />

</RelativeLayout>